<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:contentDescription="@string/toolbar_desc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/toolbar_icon_desc"
                android:src="@drawable/suerte_sin_bg" />

            <TextView
                android:id="@+id/placeholder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/app_name"
                android:textColor="@color/toolbar_text"
                android:textSize="20sp"
                android:contentDescription="@string/app_name_desc" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- RecyclerView for incidents -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_bar"
        android:layout_below="@id/toolbar"
        android:padding="10dp"
        android:visibility="visible"
        android:contentDescription="@string/recycler_view_desc" />

    <!-- No incidents found message -->
    <TextView
        android:id="@+id/noIncidentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="No incidents found."
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:visibility="gone"
        android:contentDescription="@string/no_incidents_desc" />

    <!-- Custom Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3"
        android:contentDescription="@string/bottom_bar_desc">

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/log_out_desc"
            android:text="LOG OUT"
            android:textColor="@color/button_text"
            android:textSize="14sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:enabled="false" />

        <Button
            android:id="@+id/button_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/change_mode_desc"
            android:onClick="changeTheme"
            android:text="@string/buttom_mode_text"
            android:textSize="12sp"
            android:textColor="@color/button_text" />
    </LinearLayout>
</RelativeLayout>
